# firehazard

./: .gitignore  Cargo.toml  LICENSE-MIT  Readme.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: rust.yml
crates/no-std/: Cargo.toml
crates/no-std/examples/: trivial.rs  trivialest.rs
crates/sandbox/: Cargo.toml
crates/sandbox-windows/: Cargo.toml
crates/sandbox-windows-ffi/: Cargo.toml  build.rs
crates/sandbox-windows-ffi/examples/: less_trivial.rs  max_sandbox.rs  restrict_child_shutdown.rs  restrict_self_integrity.rs  restrict_self_policy.rs  restrict_self_shutdown.rs  spam_dbg.rs  trivial.rs  ui_basic_window.rs  ui_switch_desktop.rs
crates/sandbox-windows-ffi/examples/max_sandbox/: attribute.rs  debugger.rs  job.rs  main.rs  run.rs  settings.rs  tokens.rs
crates/sandbox-windows-ffi/src/: error.rs  lib.rs
crates/sandbox-windows-ffi/src/access/: constants.rs  mask.rs
crates/sandbox-windows-ffi/src/ace/: ace_flags.rs  ace_iter.rs  ace_ptr.rs
crates/sandbox-windows-ffi/src/acl/: acl_ptr.rs
crates/sandbox-windows-ffi/src/alloc/: _alloc.rs  allocator.rs  cboxsized.rs  cstring.rs
crates/sandbox-windows-ffi/src/debug/funcs/: debugapi_h.rs  memoryapi_h.rs
crates/sandbox-windows-ffi/src/desktop/: _desktop.rs  desktop_access_rights.rs  desktop_flags.rs  desktop_funcs.rs  desktop_handles.rs  desktop_owned_handle.rs
crates/sandbox-windows-ffi/src/handle/: _handle.rs  handle_flags.rs  handle_funcs.rs  handle_handles.rs  handle_owned.rs  handle_traits.rs
crates/sandbox-windows-ffi/src/io/: _io.rs  io_funcs.rs  io_handles.rs  io_not_std.rs
crates/sandbox-windows-ffi/src/job/: _job.rs  job_funcs.rs  job_handles.rs  job_information.rs
crates/sandbox-windows-ffi/src/job/object/: basic_ui_restrictions.rs  security_limit_information.rs  uilimit.rs
crates/sandbox-windows-ffi/src/macros/: _macros.rs  macros_flags.rs  macros_handles.rs
crates/sandbox-windows-ffi/src/pipe/: _pipe.rs  pipe_funcs.rs  pipe_handles.rs
crates/sandbox-windows-ffi/src/policy/funcs/: heap_enable_termination_on_corruption.rs
crates/sandbox-windows-ffi/src/privilege/: _privilege.rs  privilege_luid.rs
crates/sandbox-windows-ffi/src/privilege/funcs/: adjust_token_privileges.rs  lookup_privilege.rs
crates/sandbox-windows-ffi/src/process/: _process.rs  process_creation_flags.rs  process_environment.rs  process_funcs.rs  process_handle.rs  process_handles.rs  process_information.rs  process_owned_handle.rs  process_psuedo_handle.rs  process_startup_info.rs  process_thread_attribute_list.rs
crates/sandbox-windows-ffi/src/process/creation/: _creation.rs  child_process.rs  desktop_app_breakaway.rs  mitigation_policy.rs  mitigation_policy2.rs
crates/sandbox-windows-ffi/src/security/: _security.rs
crates/sandbox-windows-ffi/src/sid/: _sid.rs  sid_and_attributes.rs  sid_ptr.rs  sid_static.rs  sid_value.rs
crates/sandbox-windows-ffi/src/sid/funcs/: convert_string_sid_to_sid.rs
crates/sandbox-windows-ffi/src/thread/: _thread.rs  thread_funcs.rs  thread_handles.rs  thread_psuedo_handle.rs
crates/sandbox-windows-ffi/src/token/: _token.rs  token_handles.rs  token_owned_handle.rs
crates/sandbox-windows-ffi/src/token/boxes/: boxes_util.rs  token_appcontainer_information.rs  token_default_dacl.rs  token_groups.rs  token_groups_and_privileges.rs  token_mandatory_label.rs  token_owner.rs  token_primary_group.rs  token_privileges.rs  token_user.rs
crates/sandbox-windows-ffi/src/token/funcs/: create_restricted_token.rs  duplicate_token_ex.rs  get_token_information.rs  is_token_restricted.rs  open_process_token.rs  open_thread_token.rs  revert_to_self.rs  set_thread_token.rs  set_token_information.rs
crates/sandbox-windows-ffi/src/token/values/: token_access_rights.rs  token_elevation.rs  token_restricted_flags.rs  token_source.rs
crates/sandbox-windows-ffi/src/util/: _util.rs  flags.rs  partition.rs
crates/sandbox-windows-ffi/src/values/: luid_and_attributes.rs
crates/sandbox-windows-ffi/src/winsta/: _winsta.rs  winsta_access_rights.rs  winsta_funcs.rs  winsta_handles.rs
crates/sandbox-windows/src/: lib.rs
crates/sandbox/src/: lib.rs
crates/testing/: Cargo.toml
crates/testing/examples/: strict_handle_check_policy.rs
crates/wasm/: Cargo.toml
crates/wasm/examples/: run-wasmer.rs  run-wasmtime.rs
doc/: debug.md  environment.md  integrity.md  overview.md  privileges.md  references.md  roadmap.md  sid.md  soundness.md  tokens.md
examples/: less_trivial.rs  max_sandbox.rs  pipe_chat.rs  query_os_support.rs  restrict_child_shutdown.rs  restrict_self_integrity.rs  restrict_self_policy.rs  restrict_self_shutdown.rs  spam_dbg.rs  trivial.rs  ui_basic_window.rs  ui_d3d11_window.rs  ui_d3d9_window.rs  ui_switch_desktop.rs
examples/max_sandbox/: attribute.rs  debugger.rs  job.rs  main.rs  run.rs  settings.rs  shared.rs  tokens.rs
scripts/: backup-wiki.cmd  build-basic.cmd  build-i686.cmd  build-nightly.cmd  build-no-features.cmd  build.cmd  check.cmd  ci-arm-build-test.cmd  ci-arm-install.cmd  info.cmd
src/: access.rs  error.rs  lib.rs  prelude.rs  type_check.rs
src/access/: _access.rs  constants.rs  mask.rs
src/ace/: _ace.rs  ace_flags.rs  ace_header.rs  ace_iter.rs  ace_ptr.rs  ace_type.rs
src/acl/: _acl.rs  acl_builder.rs  acl_in_default_or_null_or_ref.rs  acl_ptr.rs  acl_revision.rs
src/alloc/: _alloc.rs  allocator.rs  cbox.rs  cboxsized.rs  cstring.rs  cvec.rs  narrow_or_wide.rs
src/appcontainer/: _appcontainer.rs  appcontainer_funcs.rs
src/boxes/: token_appcontainer_information.rs  token_groups.rs  token_groups_and_privileges.rs  token_mandatory_label.rs  token_owner.rs  token_primary_group.rs  token_privileges.rs  token_user.rs
src/capability/: _capability.rs
src/debug/: _debug.rs  debug_event.rs  firehazard.natvis
src/desktop/: _desktop.rs  desktop_access_rights.rs  desktop_flags.rs  desktop_funcs.rs  desktop_handles.rs  desktop_owned_handle.rs
src/dlls/: _dlls.rs  kernelbase.rs  ntdll.rs
src/error/: _error.rs  error.rs  fast_fail.rs  handle_conversion_error.rs  preserve_error_scope.rs
src/file/: _file.rs  (+4 more)
(+283 files in other folders)
