# https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members                     = ["crates/*"]
exclude                     = ["crates/no-std"] # separate workspace

[package]
name                        = "firehazard"
version                     = "0.0.0-2022-09-03"
# rust-version              = "1.63" # TODO: verify or downlevel
description                 = "Unopinionated low level API bindings focused on soundness, safety, and stronger types over raw FFI."
authors                     = ["MaulingMonkey <git@maulingmonkey.com>"]
edition                     = "2021"
license                     = "Apache-2.0 OR MIT"
readme                      = "Readme.md"
documentation               = "https://docs.rs/firehazard"
repository                  = "https://github.com/MaulingMonkey/firehazard"

keywords = [
    # Note: crates.io has a maximum of 5 keywords
    "windows",
    "win32",
    "security",
    "sandbox",
    "sandboxing",
]

categories = [
    # https://crates.io/category_slugs
    "api-bindings",
    # "cryptography"    # not yet, but eventually?
    "no-std",
    "os::windows-apis",
    # "virtualization"  # not yet, but eventually?
]

[package.metadata.docs.rs]
all-features                = true
default-target              = "x86_64-pc-windows-msvc"

[features]
default                     = ["std"]
std                         = ["abistr/std", "abistr/widestring", "winapi/std"]

[dependencies]

abibool                     = "0.5.3"
#abibool.git                 = "https://github.com/MaulingMonkey/abibool"
#abibool.rev                 = "7998497f56ec339d1cf2ea70532d55550b2380f3"

abistr.default-features     = false
#abistr.version              = "0.2.0-rc3"
abistr.git                  = "https://github.com/MaulingMonkey/abistr"
abistr.rev                  = "3d57e647dbbdc00f953dea779497758a226d8191"

[target.'cfg(windows)'.dependencies]
winapi.version = "0.3"
winapi.features = [
    # shared
    "bcrypt",
    "sddl",
    "winerror",

    # um
    "debugapi",
    "errhandlingapi",
    "handleapi",
    "heapapi",
    "jobapi",
    "jobapi2",
    "lsalookup",
    "memoryapi",
    "namedpipeapi",
    "ntlsa",
    "processthreadsapi",
    "securitybaseapi",
    "synchapi",
    "winbase",
    "winnt",
    "winuser",
]
