# https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members                     = ["crates/*"]
exclude                     = ["crates/no-std"] # separate workspace

[package]
name                        = "firehazard"
version                     = "0.0.0-2022-09-10"
rust-version                = "1.81.0" # ialloc MSRV
description                 = "Unopinionated low level API bindings focused on soundness, safety, and stronger types over raw FFI."
authors                     = ["MaulingMonkey <git@maulingmonkey.com>"]
edition                     = "2021"
license                     = "Apache-2.0 OR MIT"
readme                      = "Readme.md"
documentation               = "https://docs.rs/firehazard"
repository                  = "https://github.com/MaulingMonkey/firehazard"

keywords = [
    # Note: crates.io has a maximum of 5 keywords
    "windows",
    "win32",
    "security",
    "sandbox",
    "sandboxing",
]

categories = [
    # https://crates.io/category_slugs
    "api-bindings",
    # "cryptography"    # not yet, but eventually?
    "no-std",
    "os::windows-apis",
    # "virtualization"  # not yet, but eventually?
]

[package.metadata.docs.rs]
all-features                = true
default-target              = "x86_64-pc-windows-msvc"
targets                     = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]

[features]
default                     = ["std"]
std                         = ["alloc", "abistr/std", "abistr/widestring", "ialloc/std", "winapi/std"]
alloc                       = ["ialloc/alloc"]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(cet)',             # CET Shadow Stack (VS2019+)
    'cfg(std)',             # Shorthand for `cfg(feature = "std")`
    'cfg(alloc)',           # Shorthand for `cfg(feature = "alloc")`

    # Never defined
    'cfg(nope)',            # Generic `#if 0 ... #endif` equivalent
    'cfg(not_yet)',         # For not yet defined stuff
]



[target.'cfg(windows)'.dependencies]
abibool                     = "0.5.3"
#abibool.git                 = "https://github.com/MaulingMonkey/abibool"
#abibool.rev                 = "7998497f56ec339d1cf2ea70532d55550b2380f3"

abistr.default-features     = false
abistr.version              = "0.2.0-rc3"
#abistr.git                  = "https://github.com/MaulingMonkey/abistr"
#abistr.rev                  = "3d57e647dbbdc00f953dea779497758a226d8191"

bytemuck.version            = "1"
bytemuck.features           = ["derive"]

ialloc.version              = "0.0.0-2025-05-02"
ialloc.default-features     = false
ialloc.features             = ["win32"]

lazy_static.version         = "1"
lazy_static.features        = ["spin_no_std"]

valrow.version              = "0.0.0-2024-02-13"

winapi.version              = "0.3"
winapi.features = [
    # common
    "impl-default",

    # shared
    "bcrypt",
    "sddl",
    "winerror",

    # um
    "combaseapi",
    "consoleapi",
    "debugapi",
    "errhandlingapi",
    "handleapi",
    "heapapi",
    "jobapi",
    "jobapi2",
    "lsalookup",
    "memoryapi",
    "namedpipeapi",
    "ntlsa",
    "processenv",
    "processthreadsapi",
    "securitybaseapi",
    "synchapi",
    "userenv",
    "winbase",
    "wincontypes",
    "winnt",
    "winuser",
]

winresult.version           = "0.1"



[target.'cfg(windows)'.dev-dependencies]
mcom.version                = "0.1.5"
mcom.default-features       = false
mcom.features               = ["windows-2000", "winapi-family-desktop-app"]

#thindx                     = "0.0.0-unsound.5"
thindx.git                  = "https://github.com/MaulingMonkey/thindx"
thindx.rev                  = "aa03b40980d2170698ffcf89ed9d64bdb69116ef"

winapi.version              = "0.3"
winapi.features = [
    # shared
    "dxgi",
    "dxgiformat",
    "dxgitype",

    # um
    "d3dcommon",
    "d3d11",
]
