# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name                        = "testing"
version                     = "0.0.0"
publish                     = false
authors                     = ["MaulingMonkey <git@maulingmonkey.com>"]
edition                     = "2021"
license                     = "Apache-2.0 OR MIT"

[dependencies]
firehazard.path             = "../.."
