# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name                        = "wasm"
version                     = "0.0.0"
publish                     = false
authors                     = ["MaulingMonkey <git@maulingmonkey.com>"]
edition                     = "2021"
license                     = "Apache-2.0 OR MIT"

[dev-dependencies]
firehazard.path             = "../.."

[target.x86_64-pc-windows-msvc.dev-dependencies]
# broken on i686:
wasmer                      = "3.0.0-beta"
wasmtime                    = "2.0.2"
