# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name                        = "wasm"
version                     = "0.0.0"
publish                     = false
authors                     = ["MaulingMonkey <git@maulingmonkey.com>"]
edition                     = "2021"
license                     = "Apache-2.0 OR MIT"

[dev-dependencies]
firehazard.path             = "../.."

[target.x86_64-pc-windows-msvc.dev-dependencies]
wasmer                      = "5"
wasmtime                    = "29" # last version that works with rustc 1.81.0
